# SIN-Code-Slash-Skill

./: .gitignore  README.md  pyproject.toml  pyproject.toml.doc.md
.github/workflows/: ceo-audit.yml  codocs.yml
scripts/: slash-help.sh  slash-help.sh.doc.md  slash-history.sh  slash-history.sh.doc.md  slash-list.sh  slash-list.sh.doc.md  slash-register.sh  slash-register.sh.doc.md  slash-remove.sh  slash-remove.sh.doc.md  slash-run.sh  slash-run.sh.doc.md
src/sin_slash/: __init__.doc.md  __init__.py  cli.doc.md  cli.py  commands.doc.md  commands.py  dispatcher.doc.md  dispatcher.py  executor.doc.md  executor.py  mcp_server.doc.md  mcp_server.py  parser.doc.md  parser.py  registry.doc.md  registry.py
src/sin_slash/cli_shims/: __init__.py  slash_dispatch.py  slash_help.py  slash_history.py  slash_list.py  slash_register.py  slash_unregister.py
tests/: __init__.doc.md  __init__.py  conftest.doc.md  conftest.py  test_cli.doc.md  test_cli.py  test_commands.doc.md  test_commands.py  test_dispatcher.doc.md  test_dispatcher.py  test_executor.doc.md  test_executor.py  test_mcp_server.doc.md  test_mcp_server.py  test_parser.doc.md  test_parser.py  test_registry.doc.md  test_registry.py
tests/tests/: __init__.doc.md
