# Docs: pyproject.toml.doc.md
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sin-slash"
version = "0.2.0"
description = "SIN-Code Slash Skill - MCP server for slash command dispatch"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "OpenSIN-Code", email = "agent@opensin-code.org"}
]
keywords = ["mcp", "slash", "commands", "sin-code", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.4.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
sin-slash = "sin_slash.cli:main"
# v0.2.0 — Standalone CLI shims for the 6 MCP tools. Lets shell users
# and sub-agents dispatch slash commands without spinning up the MCP
# server. Each shim is a thin argparse wrapper around the corresponding
# function in sin_slash.mcp_server.
slash-dispatch = "sin_slash.cli_shims.slash_dispatch:main"
slash-list = "sin_slash.cli_shims.slash_list:main"
slash-register = "sin_slash.cli_shims.slash_register:main"
slash-unregister = "sin_slash.cli_shims.slash_unregister:main"
slash-help = "sin_slash.cli_shims.slash_help:main"
slash-history = "sin_slash.cli_shims.slash_history:main"

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/SIN-Code-Slash-Skill"
Repository = "https://github.com/OpenSIN-Code/SIN-Code-Slash-Skill"
Issues = "https://github.com/OpenSIN-Code/SIN-Code-Slash-Skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sin_slash"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=sin_slash --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::ResourceWarning",
]
